--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <!-- <base href="$FLUTTER_BASE_HREF"> -->
-  <base href="/desync-o-tron/open_fitness_tracker/">
+  <base href="$FLUTTER_BASE_HREF">
+  <!-- <base href="/desync-o-tron/open_fitness_tracker/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
